--- a/request/views/404.ejs
+++ b/request/views/404.ejs
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Error Page</title>
-</head>
+<%- include('./partials/head.ejs')  %>
 
 <body>
-    <div class="site-title">
-        <a href="/">
-            <h2>Blog</h2>
-        </a>
-        <p>web site</p>
-    </div>
-    <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-    </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
     <div class="not-found content">
         OOPS, page not found :(
     </div>
+    <%- include("./partials/footer.ejs") %>
 </body>
 
 </html>
