--- a/request/views/about.ejs
+++ b/request/views/about.ejs
@@ -1,26 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
-</head>
+<%- include('./partials/head.ejs')  %>
 
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/">
-                <h1>BLOG</h1>
-            </a>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
     <div class="about content">
         <h2>About us</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut totam quod dignissimos perferendis, quos sequi
@@ -33,7 +16,7 @@
             dolorem reprehenderit magni eum eaque fuga veniam voluptatibus ea molestias, maiores quam. Harum, culpa
             ipsum?</p>
     </div>
-
+    <%- include("./partials/footer.ejs") %>
 </body>
 
 </html>
