--- a/request/views/create.ejs
+++ b/request/views/create.ejs
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog create you own blog</title>
-</head>
+<%- include('./partials/head.ejs')  %>
 
 <body>
-    <div class="site-title">
-        <a href="/">
-            <h2>Blog</h2>
-        </a>
-        <p>web site</p>
-    </div>
-    <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-    </ul>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
         <form>
-            <label></label>
+            <label for="title">Blog title:</label>
+            <input type="text" id="title" required />
+            <label for="snipet">Blog snoppet:</label>
+            <input type="text" id="snippet" required />
+            <label for="body" Blog text:></label>
+            <textarea id="body" required></textarea>
+            <button>Submit</button>
         </form>
     </div>
+    <%- include("./partials/footer.ejs") %>
 </body>
 
 </html>
