--- a/request/views/index.ejs
+++ b/request/views/index.ejs
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-</head>
+<%- include('./partials/head.ejs')  %>
 
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/">
-                <h2>Blog</h2>
-            </a>
-            <p>web site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
     <div class="blogs content">
         <h1>All blogs</h1>
+
+        <% if (blogs.length > 0) { %>
+        <% blogs.forEach(blog => { %>
+        <h3 class="title"> <%= blog.title %> </h3>
+        <p class="snippet"><%= blog.snippet %> </p>
+
+        <% }) %>
+        <% } else { %>
+        <p>There are no blogs to dislpay...</p>
+        <% } %>
     </div>
+    <%- include("./partials/footer.ejs") %>
 </body>
 
 </html>
