--- a/request/views/partials/nav.ejs
+++ b/request/views/partials/nav.ejs
@@ -3,7 +3,7 @@
            <a href="/">
                <h2>Blog</h2>
            </a>
-           <p> web site</p>
+           <p>code Articles</p>
        </div>
        <ul>
            <li><a href="/">Blogs</a></li>
