--- a/request/views/create.ejs
+++ b/request/views/create.ejs
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 <%- include('./partials/head.ejs')  %>
 
 <body>
     <%- include('./partials/nav.ejs') %>
 
-    <div class="create-blog content">
-        <form>
+    <div class="create-blog">
+        <form action="/blogs" method="POST">
             <label for="title">Blog title:</label>
-            <input type="text" id="title" required />
-            <label for="snipet">Blog snoppet:</label>
-            <input type="text" id="snippet" required />
+            <input type="text" id="title" name="title" required />
+            <label for="snipet">Blog snippet:</label>
+            <input type="text" id="snippet" name="snippet" required />
             <label for="body" Blog text:></label>
-            <textarea id="body" required></textarea>
+            <textarea id="body" name="body" required></textarea>
             <button>Submit</button>
         </form>
     </div>
