--- a/request/views/index.ejs
+++ b/request/views/index.ejs
@@ -5,13 +5,14 @@
 <body>
     <%- include('./partials/nav.ejs') %>
     <div class="blogs content">
-        <h1>All blogs</h1>
+        <h1 class="blogs__title"> All blogs</h1>
 
         <% if (blogs.length > 0) { %>
         <% blogs.forEach(blog => { %>
-        <h3 class="title"> <%= blog.title %> </h3>
-        <p class="snippet"><%= blog.snippet %> </p>
-
+        <a class="single" href="/blogs/<%= blog._id %>">
+            <h3 class="title"> <%= blog.title %> </h3>
+            <p class=" snippet"><%= blog.snippet %> </p>
+        </a>
         <% }) %>
         <% } else { %>
         <p>There are no blogs to dislpay...</p>
