--- a/request/public/styles.css
+++ b/request/public/styles.css
@@ -123,7 +123,7 @@ textarea {
 .delete {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -200px;
     border-radius: 10px;
     padding: 8px;
 }
@@ -131,4 +131,9 @@ textarea {
 .delete:hover {
     cursor: pointer;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+}
+
+.trash {
+
+    cursor: pointer;
 }
