--- a/request/views/details.ejs
+++ b/request/views/details.ejs
@@ -8,21 +8,20 @@
         <div class="content">
             <p><%= blog.body %></p>
         </div>
-        <a class="delete" data-doc="<%= blog._id %>">Delete post</a>
+        <a class="delete" data-doc="<%= blog._id %>"><img class="trash" src="/delete.svg" />Delete post</a>
     </div>
     <%- include("./partials/footer.ejs") %>
-    <script>
-        const trash = document.querySelector("a.delete");
 
-        trash.addEventListener("click", (e) => {
-            const endpoint = `/blogs/${trash.dataset.doc}`;
+    <script>
+        const trashcan = document.querySelector("a.delete");
+
+        trashcan.addEventListener("click", (e) => {
+            const endpoint = `/blogs/${trashcan.dataset.doc}`;
 
             fetch(endpoint, {
                     method: "DELETE"
                 })
-                .then((response) => {
-                    response.json()
-                })
+                .then((response) => response.json())
                 .then((data) => window.location.href = data.redirect)
                 .catch((err) => {
                     console.log(err);
